# pdf_compare

./: .gitignore  Dockerfile  Non-Use-Warrenty_No2.docx  README.md  dict_data.py  docker-compose.yml  gradio_text.py  main.py  match_line.py  pdf_viewer.py  pyproject.toml  result.json  result2.json  test.json  treat_matched_pair.py  ~$n-Use-Warrenty_No2.docx
app/: compare.py  main.py
app/static/: index.html
app/utils/: highlight_match.py  match_line.py  run_compare.py  treat_matched_pair.py
pdf-viewer/: package-lock.json  package.json
pdf-viewer/src/: App.css  App.js  index.js
pdf-viewer/src/components/: PdfViewer.js  Uploader.js
